--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "inline-html": "file:../inline-html",
     "js-string-escape": "^1.0.0",
+    "lodash": "^3.10.0",
     "static-module": "^1.1.3",
     "through2": "^2.0.0"
   },
