--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "html-inlinify",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Inline local assets referenced in an HTML document.",
-  "keywords": ["browserify-transform"],
+  "keywords": [
+    "browserify-transform"
+  ],
   "repository": "panosoft/html-inlinify",
   "main": "lib/index.js",
   "scripts": {
