--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "panosoft/html-inlinify",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --harmony_arrow_functions"
   },
   "author": "",
   "license": "MIT",
@@ -20,7 +20,11 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
+    "@panosoft/require-string": "^0.1.4",
     "browserify": "^11.0.0",
-    "co": "^4.6.0"
+    "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
+    "co": "^4.6.0",
+    "mocha": "^2.2.5"
   }
 }
