--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "inline-html": "^0.1.0",
     "js-string-escape": "^1.0.0",
-    "lodash": "^3.10.0",
+    "ramda": "^0.17.1",
     "static-module": "^1.1.3",
     "through2": "^2.0.0"
   },
